--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "url": "git+https://github.com/shanduy/ShanBot.git"
   },
   "bugs": {
-    "url": "https://github.com/shanduy/ShanBot.git"
+    "url": "https://github.com/StevenD-ops/WhatsappBot-v1.git"
   },
-  "homepage": "https://github.com/shanduy/ShanBot#readme"
+  "homepage": "https://github.com/StevenD-ops/WhatsappBot-v1#readme"
 }
