--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shanduy/ShanBot.git"
+    "url": "git+https://github.com/StevenD-ops/WhatsappBot-v1.git"
   },
   "bugs": {
     "url": "https://github.com/StevenD-ops/WhatsappBot-v1.git"
