--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -18,15 +17,7 @@
     "whatsapp",
     "bot"
   ],
-  "author": "stevee",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/StevenD-ops/WhatsappBot-v1.git"
-  },
-  "bugs": {
-    "url": "https://github.com/StevenD-ops/WhatsappBot-v1.git"
-  },
-  "homepage": "https://github.com/StevenD-ops/WhatsappBot-v1#readme",
+  "author": "Stevee",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/baileys": "github:adiwajshing/baileys",
@@ -34,30 +25,27 @@
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "cfonts": "^2.9.0",
-    "dotenv": "^8.2.0",
-    "brainly-scraper": "^1.0.3",
-    "fs-extra": "^9.0.1",
-    "parse-ms": "^2.1.0",
     "escape-string-regexp": "^4.0.0",
     "fake-useragent": "^1.0.1",
     "fluent-ffmpeg": "^2.1.2",
-    "got": "^11.8.1",
-    "ms": "^2.1.3",
-    "image-to-base64": "^2.1.1",
-    "moment-timezone": "^0.5.32",
-    "awesome-phonenumber": "^2.47.0",
+    "got": "^11.8.2",
     "imgbb-uploader": "^1.3.0",
     "lolis.life": "^4.0.0",
+    "moment-timezone": "^0.5.32",
     "multistream": "^4.0.1",
-    "needle": "^2.5.2",
     "node-fetch": "^2.6.1",
-    "node-gtts": "^2.0.2",
-    "node-tesseract-ocr": "^2.0.0",
-    "performance-now": "^2.1.0",
-    "qrcode-terminal": "^0.12.0",
     "remove.bg": "^1.3.0",
     "request": "^2.81.0",
     "spinnies": "^0.5.1",
     "tiktok-scraper": "^1.4.7"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/StevenD-ops/WhatsappBot-v1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/StevenD-ops/WhatsappBot-v1.git"
+  },
+  "homepage": "https://github.com/StevenD-ops/WhatsappBot-v1#readme"
 }
